--- a/test.ipynb
+++ b/test.ipynb
@@ -286,8 +286,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "6d4338eb-4cc9-457a-989b-582c4325b52e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4.76314e-12\n",
+      "[ 0.00000000e+00  6.99818480e+07  1.39963696e+08 ... -2.09945544e+08\n",
+      " -1.39963696e+08 -6.99818480e+07]\n",
+      "104902790152.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "nt = int(3e3)\n",
+    "dx = dy = dz = cp.float32(2.5e-3)  # mm, spatial step size\n",
+    "\n",
+    "\n",
+    "dt = 0.99*dx / (3e8 * np.sqrt(np.float32(3)))\n",
+    "print(dt)\n",
+    "print(np.fft.fftfreq(nt, d=dt))\n",
+    "print(max(np.fft.fftfreq(nt, d=dt)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aae29906-c6c7-43ec-a56f-67158e462c04",
    "metadata": {},
    "outputs": [],
    "source": []
