--- a/1_ghz_antenna.ipynb
+++ b/1_ghz_antenna.ipynb
@@ -814,7 +814,7 @@
     "        Hx_record[n] = (Hx[i_x_prob, i_y_prob, i_z_prob] + Hx[i_x_prob, i_y_prob+1, i_z_prob+1])/2                       \n",
     "        Hy_record[n] = (Hy[i_x_prob, i_y_prob, i_z_prob] + Hy[i_x_prob+1, i_y_prob, i_z_prob+1])/2\n",
     "        Hz_record[n] = (Hz[i_x_prob, i_y_prob, i_z_prob] + Hz[i_x_prob+1, i_y_prob+1, i_z_prob])/2\n",
-    "        Ez_gap[n] = Ez[i_x_src, i_y_src, i_z_src] * dz\n",
+    "        Ez_gap[n] = (Ez[i_x_src, i_y_src, i_z_src]+Ez[i_x_src, i_y_src, i_z_src+1]) * dz\n",
     "        # Jxy_gap[n] = fdtd_functions.gaussian_source(n, dt, sigma, omega_0) * dx * dy * dt\n",
     "        Jxy_gap[n] = fdtd_functions.gprmax_gaussian_source(n, dt, omega_0) * dx * dy * dt\n",
     "        \n",
